--- a/resume.tex
+++ b/resume.tex
@@ -2,9 +2,9 @@
 
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry}
 
-\name{John Q. Public}
-\address{ 4489 Oxford Lane \\ San Antonio, PA 90024  }
-\address{ 555~$\cdot$~356~$\cdot$~7936 \\ jpublic@example.edu }
+\name{Hugo Klepsch}
+\address{ 5663 Appleby line \\ Burlington, ON L7M0P3  }
+\address{ 905~$\cdot$~749~$\cdot$~4627 \\ hugo.klepsch@gmail.com }
 
 \def\nameskip{\bigskip}
 \def\sectionskip{\medskip}
