--- a/resume.tex
+++ b/resume.tex
@@ -1,51 +1,45 @@
 \documentclass{resume}
 
-\usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry}
+\usepackage[left=0.25in,top=0.2in,right=0.25in,bottom=0.2in]{geometry}
 
 \name{Hugo Klepsch}
 \address{ 5663 Appleby line \\ Burlington, ON L7M0P3  }
 \address{ 905~$\cdot$~749~$\cdot$~4627 \\ hugo.klepsch@gmail.com }
 
-\def\nameskip{\bigskip}
-\def\sectionskip{\medskip}
-
 \begin{document}
 
   \begin{rSection}{Education}
-    {\bf University of California, Berkeley} \hfill {\em June 2004} \\ 
-    { B.S. in Computer Science \& Engineering } \\
-    { Minor in Linguistics } \smallskip \\
-    { Member of Eta Kappa Nu } \\
-    { Member of Upsilon Pi Epsilon } \\
-    Overall GPA: 5.678
+    {\bf University of Guelph} \hfill {\em September 2015 - April 2020} \\ 
+    { B.Comp. Software Engineering (Co-op), Honours } \\
+    { Minor in Marketing } \smallskip \\
+    { Dr. Mary McLeish Scholarship recipient (Highest GPA in Software engineering major)
+} \\
+    { 2018 Braithwaite Business Scholarship
+} \\
+    { Deans list }
   \end{rSection}
   
   \begin{rSection}{Experience}
   
-    \begin{rSubsection}{ACME, Inc}{October 2010 - Present}{Web Developer}{Palo Alto, CA}
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus.
-    \item Donec et mollis dolor. Praesent et diam eget libero Adobe Coldfusion egestas mattis sit amet vitae augue.
-    \item Nam tincidunt congue enim, ut porta lorem Microsoft SQL lacinia consectetur.
-    \item Donec ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    \item Pellentesque auctor nisi id magna consequat JavaScript sagittis.
-    \item Aliquam at massa ipsum. Quisque bash bibendum purus convallis nulla ultrices ultricies.
+    \begin{rSubsection}{Arctic Wolf Networks}
+    	{May 2018 - August 2018, January 2019 - August 2019}
+    	{Member of technical staff}{Waterloo, ON}
+    \item Used Esper, Apache Flink and Hadoop as part of a complex event processing pipeline to find patterns in unbounded series of events.
+    \item Part of team that pioneered construction of time-series anomaly detection system.
+    \item Wrote independent auto-scaling services as part of a data processing pipeline that processed 8 billion messages
+per day.
+    \item Added metrics and stability alerts to services.
     \end{rSubsection}
   
-    \begin{rSubsection}{AJAX Hosting}{December 2009 - October 2010}{Lead Developer}{Austin, TX}
-    \item Aenean ut gravida lorem. Ut turpis felis, Perl pulvinar a semper sed, adipiscing id dolor.
-    \item Curabitur dapibus enim sit amet elit pharetra tincidunt website feugiat nisl imperdiet. Ut convallis AJAX libero in urna ultrices accumsan.
-    \item Cum sociis natoque penatibus et magnis dis MySQL parturient montes, nascetur ridiculus mus.
-    \item In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.
-    \item Nullam cursus suscipit nisi, et ultrices justo sodales nec. Fusce venenatis facilisis lectus ac semper.
+    \begin{rSubsection}{Carnegie Technologies}
+    	{May 2017 - December 2017}
+    	{Native back-end developer}{Waterloo, ON}
+    \item Developed native C++ GPS and ephemeris libraries for use in embedded devices.
+    \item Participated in the design of, and implemented REST style microservices using Node.js and RabbitMQ.
+    \item Designed and implemented C++ and Node.js RabbitMQ messaging library with support for a variety of usage patterns (Consumer, Requester).
+    \item Designed and implemented C++ JSON manipulation and validation library with support for proprietary extensionsto JSON schema specification.
     \end{rSubsection}
 
-    \begin{rSubsection}{TinySoft}{January 2008 - April 2010}{Web Designer \& Developer}{Gainesville, GA}
-    \item Vivamus PostgreSQL fermentum semper porta. Nunc diam velit PHP, adipiscing ut tristique vitae
-    \item Maecenas convallis ullamcorper ultricies stylesheets.
-    \item Quisque mi metus, unit tests CSS ornare sit amet fermentum et, tincidunt et orci.
-    \item Curabitur venenatis pulvinar tellus gravida ornare. Sed et erat faucibus nunc euismod ultricies ut id
-    \end{rSubsection}
-  
   \end{rSection}
   
   \begin{rSection}{Technical Strengths}
