--- a/resume.tex
+++ b/resume.tex
@@ -12,19 +12,17 @@
 \begin{document}
 
   \begin{rSection}{Education}
-    {\bf University of Guelph} \hfill {\em September 2015 - April 2020} \\ 
-    { B.Comp. Software Engineering (Co-op), Honours } 
-    \begin{list}{$\cdot$}{\leftmargin=2em}
-    	\itemsep -0.5em \vspace{-0.5em}
+    \begin{rSubsection}{University of Guelph}
+    	{September 2015 - April 2020}
+    	{ B.Comp. Software Engineering (Co-op), Honours }{Guelph, ON}
     	\item { Minor in Marketing }
     	\item { Dr. Mary McLeish Scholarship recipient (Highest GPA in Software engineering major)} 
     	\item { 2018 Braithwaite Business Scholarship} 
     	\item { Deans list }
-    \end{list}
+	\end{rSubsection}
   \end{rSection}
 
   \begin{rSection}{Experience}
-  
     \begin{rSubsection}{Arctic Wolf Networks}
     	{May 2018 - August 2018, January 2019 - August 2019}
     	{Member of technical staff}{Waterloo, ON}
@@ -47,10 +45,10 @@
     \item Designed and implemented C++ JSON manipulation and validation library with support for 
     proprietary extensions to JSON schema specification.
     \end{rSubsection}
-
   \end{rSection}
 
   \begin{rSection}{Open Source Contributions}
+  	\vspace{-0.5em}
   	\begin{center}
   		\begin{minipage}[t]{0.33333\textwidth}
   			\raggedright
@@ -58,22 +56,27 @@
   			{\em December 2017}\\
   			\begin{list}{$\cdot$}{\leftmargin=0.8em}
   				\itemsep -0.5em \vspace{-0.2em}
-  				\item {\small Proposed and added Dockersupport}
+  				\item {\small Proposed and added Docker
+support}
   			\end{list}
   		\end{minipage}%
 	  	\begin{minipage}[t]{0.33333\textwidth}
 	  		\raggedright
-	  		{\bf netmail-open/wjelement}\\
+	  		{\bf netmail-open/wjelement}
+\\
   			{\em November 2017} \\
   			\begin{list}{$\cdot$}{\leftmargin=0.8em}
   				\itemsep -0.0em \vspace{-0.2em}
-  				\item {\small Found and fixed bug causing librarynot to compile with glibc}
-  				\item {\small Added date-time support to JSONschema verification system}
+  				\item {\small Found and fixed bug causing library
+not to compile with glibc}
+  				\item {\small Added date-time support to JSON
+schema verification system}
   			\end{list}
 	  	\end{minipage}%
 	  	\begin{minipage}[t]{0.33333\textwidth}
 	  		\raggedright
-	  		{\bf DefinitelyTyped/DefinitelyTyped}\\
+	  		{\bf DefinitelyTyped/DefinitelyTyped}
+\\
   			{\em July 2017} \\
   			\begin{list}{$\cdot$}{\leftmargin=0.8em}
   				\itemsep -0.0em \vspace{-0.2em}
@@ -82,8 +85,19 @@
 	  	\end{minipage}
 	  \end{center}
   \end{rSection}
-  
-  \begin{rSection}{Technical Strengths}
+
+  \begin{rSection}{Volunteer History}
+  	\begin{rSubsection}{Alumni and programming mentor, former student member}
+  		{September 2013 – Present}
+  		{M. M. Robinson high school's robotics club, “Rambotics”}{Burlington, ON}
+  		\item {Created various sub-systems for functional mechanisms}
+  		\item {Used PIDF closed-loop control, computer vision, motion profiling, path following, etc. for autonomous control of robot}
+  		\item {Used encoders, potentiometers, limit switches, line followers \& cameras as input data for control loops}
+  		\item {Taught high-school students about control flow, program structure, git \& the above}
+  	\end{rSubsection}
+  \end{rSection}
+
+  \begin{rSection}{Volunteer History}
     \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
       Computer Languages & Prolog, Haskell, AWK, Erlang, Scheme, ML \\
       Protocols \& APIs & XML, JSON, SOAP, REST \\
