--- a/resume.tex
+++ b/resume.tex
@@ -14,8 +14,7 @@
   \begin{rSection}{Education}
     \begin{rSubsection}{University of Guelph}
     	{September 2015 - April 2020}
-    	{ B.Comp. Software Engineering (Co-op), Honours }{Guelph, ON}
-    	\item { Minor in Marketing }
+    	{ B.Comp. Software Engineering (Co-op), Honours. Marketing minor }{Guelph, ON}
     	\item { Dr. Mary McLeish Scholarship recipient (Highest GPA in Software engineering major)} 
     	\item { 2018 Braithwaite Business Scholarship} 
     	\item { Deans list }
@@ -26,57 +25,52 @@
     \begin{rSubsection}{Arctic Wolf Networks}
     	{May 2018 - August 2018, January 2019 - August 2019}
     	{Member of technical staff}{Waterloo, ON}
-    \item Used Esper, Apache Flink and Hadoop as part of a complex event processing pipeline to find 
-    patterns in unbounded series of events.
-    \item Part of team that pioneered construction of time-series anomaly detection system.
-    \item Wrote independent auto-scaling services as part of a data processing pipeline that processed 8 
-    billion messages per day.
-    \item Added metrics and stability alerts to services.
+    	\item Used Esper, Apache Flink and Hadoop as part of a complex event processing pipeline 
+    		to find patterns in unbounded series of real-time events
+    	\item Helped design and build time-series anomaly detection system
+    	\item Wrote independent auto-scaling services as part of a data processing pipeline that 
+    		processed 22 billion messages per day
+    	\item Added metrics and stability alerts to services
     \end{rSubsection}
 
     \begin{rSubsection}{Carnegie Technologies}
     	{May 2017 - December 2017}
     	{Native back-end developer}{Waterloo, ON}
-    \item Developed native C++ GPS and ephemeris libraries for use in embedded devices.
-    \item Participated in the design of, and implemented REST style microservices using Node.js and 
-    RabbitMQ.
-    \item Designed and implemented C++ and Node.js RabbitMQ messaging library with support for a variety 
-    of usage patterns (Consumer, Requester).
-    \item Designed and implemented C++ JSON manipulation and validation library with support for 
-    proprietary extensions to JSON schema specification.
+    	\item Developed native C++ GPS and ephemeris libraries for use in embedded devices
+    	\item Participated in the design of, and implemented REST style microservices using 
+    		Node.js and RabbitMQ
+    	\item Designed and implemented C++ and Node.js RabbitMQ messaging library with 
+    		support for a variety of usage patterns (Consumer, Requester)
+    	\item Designed and implemented C++ JSON manipulation and validation library with 
+    		support for proprietary extensions to JSON schema specification
     \end{rSubsection}
   \end{rSection}
 
   \begin{rSection}{Open Source Contributions}
   	\vspace{-0.5em}
   	\begin{center}
+	  	\begin{minipage}[t]{0.33333\textwidth}
+			\raggedright
+			{\bf netmail-open/wjelement}\\
+			{\em November 2017} \\
+			\begin{list}{$\cdot$}{\leftmargin=0.8em}
+				\itemsep -0.0em \vspace{-0.2em}
+				\item {\small Found and fixed bug causing library not to compile with glibc}
+				\item {\small Added date-time support to JSON schema verification system}
+			\end{list}
+		\end{minipage}%
   		\begin{minipage}[t]{0.33333\textwidth}
   			\raggedright
   			{\bf avast-tl/retdec} \\
   			{\em December 2017}\\
   			\begin{list}{$\cdot$}{\leftmargin=0.8em}
   				\itemsep -0.5em \vspace{-0.2em}
-  				\item {\small Proposed and added Docker
-support}
+  				\item {\small Proposed and added Docker support}
   			\end{list}
   		\end{minipage}%
 	  	\begin{minipage}[t]{0.33333\textwidth}
 	  		\raggedright
-	  		{\bf netmail-open/wjelement}
-\\
-  			{\em November 2017} \\
-  			\begin{list}{$\cdot$}{\leftmargin=0.8em}
-  				\itemsep -0.0em \vspace{-0.2em}
-  				\item {\small Found and fixed bug causing library
-not to compile with glibc}
-  				\item {\small Added date-time support to JSON
-schema verification system}
-  			\end{list}
-	  	\end{minipage}%
-	  	\begin{minipage}[t]{0.33333\textwidth}
-	  		\raggedright
-	  		{\bf DefinitelyTyped/DefinitelyTyped}
-\\
+	  		{\bf DefinitelyTyped/DefinitelyTyped}\\
   			{\em July 2017} \\
   			\begin{list}{$\cdot$}{\leftmargin=0.8em}
   				\itemsep -0.0em \vspace{-0.2em}
@@ -89,20 +83,27 @@ schema verification system}
   \begin{rSection}{Volunteer History}
   	\begin{rSubsection}{Alumni and programming mentor, former student member}
   		{September 2013 – Present}
-  		{M. M. Robinson high school's robotics club, “Rambotics”}{Burlington, ON}
+  		{M. M. Robinson high school's FRC team, “MMRambotics", team 2200}{Burlington, ON}
   		\item {Created various sub-systems for functional mechanisms}
-  		\item {Used PIDF closed-loop control, computer vision, motion profiling, path following, etc. for autonomous control of robot}
-  		\item {Used encoders, potentiometers, limit switches, line followers \& cameras as input data for control loops}
+  		\item {Used PIDF closed-loop control, computer vision, motion profiling, path following, 
+  			etc. for autonomous control of robot}
+  		\item {Used encoders, potentiometers, limit switches, line followers, ultrasonic rangefinders
+  			\& cameras as input data for control loops}
   		\item {Taught high-school students about control flow, program structure, git \& the above}
   	\end{rSubsection}
   \end{rSection}
 
-  \begin{rSection}{Volunteer History}
-    \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-      Computer Languages & Prolog, Haskell, AWK, Erlang, Scheme, ML \\
-      Protocols \& APIs & XML, JSON, SOAP, REST \\
-      Databases & MySQL, PostgreSQL, Microsoft SQL \\
-      Tools & SVN, Vim, Emacs
+  \begin{rSection}{Technical Strengths}
+    \begin{tabular}{ @{} >{\bfseries}l @{\hspace{1em}} l }
+      Computer Languages & {C, Python, Java, C++, Bash, Node.js} \\
+      Tools & \begin{tabular}[c]{@{}l@{}}
+      	Linux, Git, Docker, Command-line tools, Flink, Esper, Hadoop, ElasticSearch, \\
+      	AWS-\{S3, EC2, ECS, EMR\}, UML, RabbitMQ, Vim, \LaTeX
+      	\end{tabular} \\
+      Development Practices & \begin{tabular}[c]{@{}l@{}}
+      	Waterfall, Agile: \{Scrum, Spiral\}, Risk management, Technical reviews, \\
+      	Measurement, Configuration management, Quality assurance
+      \end{tabular} \\
     \end{tabular}
   \end{rSection}
 
