--- a/resume.tex
+++ b/resume.tex
@@ -4,7 +4,7 @@
 \usepackage{multicol}
 
 \name{Hugo Klepsch}
-\address{ 5663 Appleby line \\ Burlington, ON L7M0P3  }
+\address{ github.com/HugoKlepsch \\ 5663 Appleby line, Burlington, ON L7M0P3  }
 \address{ 905~$\cdot$~749~$\cdot$~4627 \\ hugo.klepsch@gmail.com }
 
 \setlength{\columnsep}{0.1cm}
@@ -17,7 +17,7 @@
     	{ B.Comp. Software Engineering (Co-op), Honours. Marketing minor }{Guelph, ON}
     	\item { Dr. Mary McLeish Scholarship recipient (Highest GPA in Software engineering major)} 
     	\item { 2018 Braithwaite Business Scholarship} 
-    	\item { Deans list }
+    	\item { Dean's Honours list }
 	\end{rSubsection}
   \end{rSection}
 
