--- a/resume.tex
+++ b/resume.tex
@@ -4,105 +4,95 @@
 \usepackage{multicol}
 
 \name{Hugo Klepsch}
-\address{ github.com/HugoKlepsch \\ 5663 Appleby line, Burlington, ON L7M0P3  }
-\address{ 905~$\cdot$~749~$\cdot$~4627 \\ hugo.klepsch@gmail.com }
+\address{ github.com/HugoKlepsch \\ 27 Southcreek Trail, Guelph, ON N1G4Y9  }
+\address{ 905$\cdot$749$\cdot$4627 \\ hugo.klepsch@gmail.com }
 
 \setlength{\columnsep}{0.1cm}
 
 \begin{document}
 
-  \begin{rSection}{Education}
-    \begin{rSubsection}{University of Guelph}
-    	{September 2015 - April 2020}
-    	{ B.Comp. Software Engineering (Co-op), Honours. Marketing minor }{Guelph, ON}
-    	\item { Dr. Mary McLeish Scholarship recipient (Highest GPA in Software engineering major)} 
-    	\item { 2018 Braithwaite Business Scholarship} 
-    	\item { Dean's Honours list }
-	\end{rSubsection}
-  \end{rSection}
-
   \begin{rSection}{Experience}
     \begin{rSubsection}{Arctic Wolf Networks}
-    	{May 2018 - August 2018, January 2019 - August 2019}
-    	{Member of technical staff}{Waterloo, ON}
-    	\item Used Esper, Apache Flink and Hadoop as part of a complex event processing pipeline 
-    		to find patterns in unbounded series of real-time events
-    	\item Helped design and build time-series anomaly detection system
-    	\item Wrote independent auto-scaling services as part of a data processing pipeline that 
-    		processed 22 billion messages per day
-    	\item Added metrics and stability alerts to services
+        {May 2018 - August 2018, January 2019 - August 2019, July 2020 - Present}
+        {Member of technical staff}{Waterloo, ON}
+        \item Used Esper, Apache Flink and Hadoop as part of a complex event processing pipeline
+            to find patterns in unbounded series of real-time events
+        \item Lead design and implementation of auto-scaling microservices supporting
+            over 350000 messages per second
+        \item Integrated new functionality without downtime into a data analysis pipeline
+            processing 50 billion messages per day
+        \item Used Agile development techniques to design, implement, and support software systems
+            at all stages of the software life-cycle
     \end{rSubsection}
 
     \begin{rSubsection}{Carnegie Technologies}
-    	{May 2017 - December 2017}
-    	{Native back-end developer}{Waterloo, ON}
-    	\item Developed native C++ GPS and ephemeris libraries for use in embedded devices
-    	\item Participated in the design of, and implemented REST style microservices using 
-    		Node.js and RabbitMQ
-    	\item Designed and implemented C++ and Node.js RabbitMQ messaging library with 
-    		support for a variety of usage patterns (Consumer, Requester)
-    	\item Designed and implemented C++ JSON manipulation and validation library with 
-    		support for proprietary extensions to JSON schema specification
+        {May 2017 - December 2017}
+        {Native back-end developer}{Waterloo, ON}
+        \item Developed native C++ GPS and ephemeris libraries for use in embedded devices
+        \item Implemented REST style microservices using Node.js and RabbitMQ
+        \item Designed and implemented C++ and Node.js RabbitMQ messaging library with
+            support for a variety of usage patterns (Consumer, Requester)
+        \item Designed and implemented C++ JSON manipulation and validation library with
+            support for proprietary extensions to JSON schema specification
     \end{rSubsection}
   \end{rSection}
 
-  \begin{rSection}{Open Source Contributions}
-  	\vspace{-0.5em}
-  	\begin{center}
-	  	\begin{minipage}[t]{0.33333\textwidth}
-			\raggedright
-			{\bf netmail-open/wjelement}\\
-			{\em November 2017} \\
-			\begin{list}{$\cdot$}{\leftmargin=0.8em}
-				\itemsep -0.0em \vspace{-0.2em}
-				\item {\small Found and fixed bug causing library not to compile with glibc}
-				\item {\small Added date-time support to JSON schema verification system}
-			\end{list}
-		\end{minipage}%
-  		\begin{minipage}[t]{0.33333\textwidth}
-  			\raggedright
-  			{\bf avast-tl/retdec} \\
-  			{\em December 2017}\\
-  			\begin{list}{$\cdot$}{\leftmargin=0.8em}
-  				\itemsep -0.5em \vspace{-0.2em}
-  				\item {\small Proposed and added Docker support}
-  			\end{list}
-  		\end{minipage}%
-	  	\begin{minipage}[t]{0.33333\textwidth}
-	  		\raggedright
-	  		{\bf DefinitelyTyped/DefinitelyTyped}\\
-  			{\em July 2017} \\
-  			\begin{list}{$\cdot$}{\leftmargin=0.8em}
-  				\itemsep -0.0em \vspace{-0.2em}
-  				\item {\small Added typescript type definitions for various Node.js libraries}
-  			\end{list}
-	  	\end{minipage}
-	  \end{center}
+  \begin{rSection}{Education}
+    \begin{rSubsection}{University of Guelph}
+        {September 2015 - April 2020}
+        { B.Comp. Software Engineering (Co-op), Honours. Marketing minor }{Guelph, ON}
+        \item { Dr. Mary McLeish Scholarship recipient (Highest GPA in Software engineering major)}
+        \item { 2018 Braithwaite Business Scholarship}
+        \item { Dean's Honours list }
+    \end{rSubsection}
+  \end{rSection}
+
+  \begin{rSection}{Personal Projects}
+    \vspace{-0.5em}
+    \begin{center}
+        \begin{minipage}[t]{0.33333\textwidth}
+            \raggedright
+            {\bf HugoKlepsch/Go-Snake}\\
+            {\em June 2021} \\
+            \begin{list}{$\cdot$}{\leftmargin=0.8em}
+            \end{list}
+        \end{minipage}%
+        \begin{minipage}[t]{0.66666\textwidth}
+            \raggedright
+            \begin{list}{$\cdot$}{\leftmargin=0.8em\rightmargin=0.8em}
+                \itemsep -0.0em \vspace{-0.2em}
+                \item {Created "Snake" AI to battle other snakes in battle-royale snake competition}
+                \item {Won 1st in Platinum league out of hundreds of other competitors}
+                \item {Used Dijkstra path-finding algorithm to optimize food intake}
+                \item {Used Minimax algorithm to find game moves with highest chance of success}
+            \end{list}
+        \end{minipage}%
+      \end{center}
   \end{rSection}
 
   \begin{rSection}{Volunteer History}
-  	\begin{rSubsection}{Alumni and programming mentor, former student member}
-  		{September 2013 – Present}
-  		{M. M. Robinson high school's FRC team, “MMRambotics", team 2200}{Burlington, ON}
-  		\item {Created various sub-systems for functional mechanisms}
-  		\item {Used PIDF closed-loop control, computer vision, motion profiling, path following, 
-  			etc. for autonomous control of robot}
-  		\item {Used encoders, potentiometers, limit switches, line followers, ultrasonic rangefinders
-  			\& cameras as input data for control loops}
-  		\item {Taught high-school students about control flow, program structure, git \& the above}
-  	\end{rSubsection}
+    \begin{rSubsection}{Alumni and programming mentor, former student member}
+        {September 2013 – Present}
+        {M. M. Robinson high school's FRC team, “MMRambotics", team 2200}{Burlington, ON}
+        \item {Created various sub-systems for functional mechanisms}
+        \item {Used PIDF closed-loop control, computer vision, motion profiling, path following
+            for autonomous control of robot}
+        \item {Used encoders, potentiometers, limit switches, line followers, ultrasonic rangefinders
+            \& cameras as input data for control loops}
+        \item {Taught high-school students about control flow, program structure, git \& the above}
+    \end{rSubsection}
   \end{rSection}
 
   \begin{rSection}{Technical Strengths}
     \begin{tabular}{ @{} >{\bfseries}l @{\hspace{1em}} l }
-      Computer Languages & {C, Python, Java, C++, Bash, Node.js} \\
+      Computer Languages & {Python, C, Java, Go, C++, Bash, Node.js} \\
       Tools & \begin{tabular}[c]{@{}l@{}}
-      	Linux, Git, Docker, Command-line tools, Flink, Esper, Hadoop, ElasticSearch, \\
-      	AWS-\{S3, EC2, ECS, EMR\}, UML, RabbitMQ, Vim, \LaTeX
-      	\end{tabular} \\
+        Linux, Git, Docker, K8s, Command-line tools, Flink, Esper, Hadoop, ElasticSearch, \\
+        AWS-\{S3, EC2, ECS, EMR, ElastiCache\}, UML, RabbitMQ, Vim, \LaTeX
+        \end{tabular} \\
       Development Practices & \begin{tabular}[c]{@{}l@{}}
-      	Waterfall, Agile: \{Scrum, Spiral\}, Risk management, Technical reviews, \\
-      	Measurement, Configuration management, Quality assurance
+        Agile: \{Scrum, Spiral\}, Waterfall, Risk management, Technical reviews, \\
+        Measurement, Configuration management, Quality assurance
       \end{tabular} \\
     \end{tabular}
   \end{rSection}
