--- a/resume.tex
+++ b/resume.tex
@@ -1,100 +1,181 @@
-\documentclass{resume}
-
+\documentclass[letterpaper]{article}
+\usepackage[utf8]{inputenc}
+\usepackage{hyperref}
+\usepackage[T1]{fontenc}
+\pagestyle{empty}
+\raggedright
 \usepackage[left=0.25in,top=0.2in,right=0.25in,bottom=0.2in]{geometry}
-\usepackage{multicol}
 
-\name{Hugo Klepsch}
-\address{ github.com/HugoKlepsch \\ 27 Southcreek Trail, Guelph, ON N1G4Y9  }
-\address{ 905$\cdot$749$\cdot$4627 \\ hugo.klepsch@gmail.com }
 
-\setlength{\columnsep}{0.1cm}
+% DEFINITIONS FOR RESUME %%%%%%%%%%%%%%%%%%%%%%%
+
+\newcommand{\lineunder} {
+  \vspace*{-8pt} \\
+  %\hspace*{-18pt} \hrulefill \\
+  \hrulefill \\
+}
+
+\newcommand{\header} [1] {
+  \vspace{1mm}
+  \MakeUppercase{\textbf{#1}}
+  \smallskip
+  \lineunder
+}
+
+\newcommand{\contact} [3] {
+  \vspace*{-10pt}
+  \begin{center}
+  {\MakeUppercase{\LARGE\textbf{\scshape {#1}}}}\\
+  #2 \\ #3
+  \end{center}
+  \vspace*{-8pt}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% SECTIONS: Create section headings
+
+% Used to create large resume section
+\newenvironment{rSection}[1]{
+  \header{#1}
+  \begin{list}{}{
+    \setlength{\leftmargin}{1.5em}
+  }
+    \item[]
+    }{
+  \end{list}
+}
+
+% Used to format job listing
+\newenvironment{rSubsection}[4]{
+%%%%%%%%%%%%%%%%%%%%%% Default Layout: %%%%%%%%%%%%%%%%%%%%%%%%
+%%    Employer (bold)                     Location (emphasis)%%
+%%    Title (emphasis)                    Dates (regular)    %%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+  \vspace{-1mm}
+  {\textbf {#1}}                 \hfill                  {        \emph{#2}}% Stop a space
+  \\
+  {\emph {#3}}                 \hfill                  {#4}% Stop a space
+  \smallskip
+% \cdot used for bullets, items non-indented
+  \begin{list}{$\cdot$}{\leftmargin=2em}
+    \itemsep -1mm \vspace{-3mm}
+    }{
+  \end{list}
+}
+
+% Used to format job listing
+\newenvironment{rSubsection2Titles}[6]{
+%%%%%%%%%%%%%%%%%%%%%% Default Layout: %%%%%%%%%%%%%%%%%%%%%%%%
+%%    Employer (bold)                     Location (emphasis)%%
+%%    Title (emphasis)                    Dates (regular)    %%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+  \vspace{-1mm}
+  {\textbf {#1}}                 \hfill                  {        \emph{#2}}% Stop a space
+  \\
+  {\emph {#3}}                 \hfill                  {#4}% Stop a space
+  \\
+  {\emph {#5}}                 \hfill                  {#6}% Stop a space
+  \smallskip
+% \cdot used for bullets, items non-indented
+  \begin{list}{$\cdot$}{\leftmargin=2em}
+    \itemsep -1mm \vspace{-3mm}
+    }{
+  \end{list}
+}
+
+% END RESUME DEFINITIONS %%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
 
-  \begin{rSection}{Experience}
-    \begin{rSubsection}{Arctic Wolf Networks}
-        {May 2018 - August 2018, January 2019 - August 2019, July 2020 - Present}
-        {Member of technical staff}{Waterloo, ON}
-        \item Used Esper, Apache Flink and Hadoop as part of a complex event processing pipeline
-            to find patterns in unbounded series of real-time events
-        \item Lead design and implementation of auto-scaling microservices supporting
-            over 350000 messages per second
-        \item Integrated new functionality without downtime into a data analysis pipeline
-            processing 50 billion messages per day
-        \item Used Agile development techniques to design, implement, and support software systems
-            at all stages of the software life-cycle
-    \end{rSubsection}
 
-    \begin{rSubsection}{Carnegie Technologies}
-        {May 2017 - December 2017}
-        {Native back-end developer}{Waterloo, ON}
-        \item Developed native C++ GPS and ephemeris libraries for use in embedded devices
-        \item Implemented REST style microservices using Node.js and RabbitMQ
-        \item Designed and implemented C++ and Node.js RabbitMQ messaging library with
-            support for a variety of usage patterns (Consumer, Requester)
-        \item Designed and implemented C++ JSON manipulation and validation library with
-            support for proprietary extensions to JSON schema specification
+%==== Profile ====%
+
+  \begin{contact}
+  {Hugo Klepsch}
+  {\href{mailto:hugo.klepsch@gmail.com}{hugo.klepsch@gmail.com} $\cdot$ \href{https://github.com/HugoKlepsch}{github.com/HugoKlepsch}}
+  {Guelph, ON $\cdot$ 905-749-4627}
+  \end{contact}
+
+  \begin{rSection}{Work Experience}
+    \begin{rSubsection2Titles}{Arctic Wolf Networks}{Waterloo, ON}
+    {Senior Developer} {January 2023 - Present}
+    {Member of technical staff} {May 2018 - August 2018, January 2019 - August 2019, July 2020 - December 2023}
+      \item Used Esper, Apache Flink and Hadoop as part of a complex event processing pipeline
+      to find patterns in unbounded series of real-time events
+      \item Lead design and implementation of auto-scaling microservices supporting
+      over 350000 messages per second
+      \item Integrated new functionality without downtime into a data analysis pipeline
+      processing 50 billion messages per day
+      \item Used Agile development techniques to design, implement, and support software systems
+      at all stages of the software life-cycle
+    \end{rSubsection2Titles}
+    \begin{rSubsection}{Carnegie Technologies}{Waterloo, ON}
+    {Native back-end developer} {May 2017 - December 2017}
+      \item Developed native C++ GPS and ephemeris libraries for use in embedded devices
+      \item Implemented REST style microservices using Node.js and RabbitMQ
+      \item Designed and implemented C++ and Node.js RabbitMQ messaging library with
+      support for a variety of usage patterns (Consumer, Requester)
+      \item Designed and implemented C++ JSON manipulation and validation library with
+      support for proprietary extensions to JSON schema specification
     \end{rSubsection}
   \end{rSection}
 
   \begin{rSection}{Education}
-    \begin{rSubsection}{University of Guelph}
-        {September 2015 - April 2020}
-        { B.Comp. Software Engineering (Co-op), Honours. Marketing minor }{Guelph, ON}
-        \item { Dr. Mary McLeish Scholarship recipient (Highest GPA in Software engineering major)}
-        \item { 2018 Braithwaite Business Scholarship}
-        \item { Dean's Honours list }
+    \begin{rSubsection}{University of Guelph}{Guelph, ON}
+    {B.Comp. Software Engineering (Co-op), Honours. Marketing minor }
+    {September 2015 - April 2020}
+      \item { Dr. Mary McLeish Scholarship recipient (Highest GPA in Software engineering major)}
+      \item { 2018 Braithwaite Business Scholarship}
+      \item { Dean's Honours list }
     \end{rSubsection}
   \end{rSection}
 
   \begin{rSection}{Personal Projects}
     \vspace{-0.5em}
     \begin{center}
-        \begin{minipage}[t]{0.33333\textwidth}
-            \raggedright
-            {\bf HugoKlepsch/Go-Snake}\\
-            {\em June 2021} \\
-            \begin{list}{$\cdot$}{\leftmargin=0.8em}
-            \end{list}
-        \end{minipage}%
-        \begin{minipage}[t]{0.66666\textwidth}
-            \raggedright
-            \begin{list}{$\cdot$}{\leftmargin=0.8em\rightmargin=0.8em}
-                \itemsep -0.0em \vspace{-0.2em}
-                \item {Created "Snake" AI to battle other snakes in battle-royale snake competition}
-                \item {Won 1st in Platinum league out of hundreds of other competitors}
-                \item {Used Dijkstra path-finding algorithm to optimize food intake}
-                \item {Used Minimax algorithm to find game moves with highest chance of success}
-            \end{list}
-        \end{minipage}%
-      \end{center}
+      \begin{minipage}[t]{0.25\textwidth}
+        \raggedright
+        \textbf{HugoKlepsch/Go-Snake}\\
+        \emph{June 2021}\\
+      \end{minipage}%
+      \begin{minipage}[t]{0.75\textwidth}
+        \raggedright
+        \begin{list}{$\cdot$}{\leftmargin=0.8em\rightmargin=0.8em}
+          \itemsep -0.0em \vspace{-0.2em}
+          \item {Created "Snake" AI to battle other snakes in battle-royale snake competition}
+          \item {Won 1st in Platinum league out of hundreds of other competitors}
+          \item {Used Dijkstra path-finding algorithm to optimize food intake}
+          \item {Used Minimax algorithm to find game moves with highest chance of success}
+        \end{list}
+      \end{minipage}%
+    \end{center}
   \end{rSection}
 
   \begin{rSection}{Volunteer History}
-    \begin{rSubsection}{Alumni and programming mentor, former student member}
-        {September 2013 – Present}
-        {M. M. Robinson high school's FRC team, “MMRambotics", team 2200}{Burlington, ON}
-        \item {Created various sub-systems for functional mechanisms}
-        \item {Used PIDF closed-loop control, computer vision, motion profiling, path following
-            for autonomous control of robot}
-        \item {Used encoders, potentiometers, limit switches, line followers, ultrasonic rangefinders
-            \& cameras as input data for control loops}
-        \item {Taught high-school students about control flow, program structure, git \& the above}
+    \begin{rSubsection}{Alumni and programming mentor, former student member}{Burlington, ON}
+    {M. M. Robinson high school's FRC team, “MMRambotics", team 2200}
+    {September 2013 – Present}
+      \item {Created various sub-systems for functional mechanisms}
+      \item {Used PIDF closed-loop control, computer vision, motion profiling, path following
+      for autonomous control of robot}
+      \item {Used encoders, potentiometers, limit switches, line followers, ultrasonic rangefinders
+      \& cameras as input data for control loops}
+      \item {Taught high-school students about control flow, program structure, git \& the above}
     \end{rSubsection}
   \end{rSection}
 
   \begin{rSection}{Technical Strengths}
-    \begin{tabular}{ @{} >{\bfseries}l @{\hspace{1em}} l }
-      Computer Languages & {Python, C, Java, Go, C++, Bash, Node.js} \\
-      Tools & \begin{tabular}[c]{@{}l@{}}
-        Linux, Git, Docker, K8s, Command-line tools, Flink, Esper, Hadoop, ElasticSearch, \\
-        AWS-\{S3, EC2, ECS, EMR, ElastiCache\}, UML, RabbitMQ, Vim, \LaTeX
-        \end{tabular} \\
-      Development Practices & \begin{tabular}[c]{@{}l@{}}
-        Agile: \{Scrum, Spiral\}, Waterfall, Risk management, Technical reviews, \\
-        Measurement, Configuration management, Quality assurance
-      \end{tabular} \\
-    \end{tabular}
+    \begin{rSubsection}{Computer Languages}{}{}{}
+      Python, Go, Java, Bash, C/C++, Node.js
+    \end{rSubsection}
+    \begin{rSubsection}{Tools \& Tech}{}{}{}
+      Linux, Git, Docker, K8s, Prometheus metrics, Command-line tools, Kafka, Avro, Hazelcast, Flink, Esper,
+      Hadoop, ElasticSearch, AWS-\{S3, SQS, Lambda, ElastiCache, CloudFormation, CloudWatch, EC2\}, UML, RabbitMQ, Vim, \LaTeX
+    \end{rSubsection}
+    \begin{rSubsection}{Development Practices}{}{}{}
+      Agile: \{Scrum, Spiral\}, Waterfall, DevOps, CI/CD, Test Driven Development, Risk management,
+      Technical reviews, Quality assurance
+    \end{rSubsection}
   \end{rSection}
 
 \end{document}
