--- a/resume.tex
+++ b/resume.tex
@@ -68,6 +68,7 @@
 %%%%%%%%%%%%%%%%%%%%%% Default Layout: %%%%%%%%%%%%%%%%%%%%%%%%
 %%    Employer (bold)                     Location (emphasis)%%
 %%    Title (emphasis)                    Dates (regular)    %%
+%%    Title 2 (emphasis)                  Dates (regular)    %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \vspace{-1mm}
   {\textbf {#1}}                 \hfill                  {        \emph{#2}}% Stop a space
@@ -103,7 +104,7 @@
       \item Used Esper, Apache Flink and Hadoop as part of a complex event processing pipeline
       to find patterns in unbounded series of real-time events
       \item Lead design and implementation of auto-scaling microservices supporting
-      over 350000 messages per second
+      over 580000 messages per second
       \item Integrated new functionality without downtime into a data analysis pipeline
       processing 50 billion messages per day
       \item Used Agile development techniques to design, implement, and support software systems
@@ -141,10 +142,10 @@
       \begin{minipage}[t]{0.75\textwidth}
         \raggedright
         \begin{list}{$\cdot$}{\leftmargin=0.8em\rightmargin=0.8em}
-          \itemsep -0.0em \vspace{-0.2em}
+          \itemsep -0.3em \vspace{-0.2em}
           \item {Created "Snake" AI to battle other snakes in battle-royale snake competition}
           \item {Won 1st in Platinum league out of hundreds of other competitors}
-          \item {Used Dijkstra path-finding algorithm to optimize food intake}
+          \item {Various versions used Dijkstra and A* path-finding algorithms to optimize food intake}
           \item {Used Minimax algorithm to find game moves with highest chance of success}
         \end{list}
       \end{minipage}%
@@ -152,25 +153,30 @@
   \end{rSection}
 
   \begin{rSection}{Volunteer History}
-    \begin{rSubsection}{Programming mentor and Alumni}{Burlington, ON}
+    \begin{rSubsection}{Mentor, programming teacher and alumni}{Burlington, ON}
     {FIRST Robotics Competition (FRC) team \href{https://burlingtoncommunityrobotics.ca/frc-2200/}{2200}}
     {September 2013 – Present}
-      \item {Created various sub-systems for functional mechanisms}
-      \item {Used PIDF closed-loop control, computer vision, motion profiling, path following
-      for autonomous control of robot}
-      \item {Used encoders, potentiometers, limit switches, line followers, ultrasonic rangefinders
-      \& cameras as input data for control loops}
+      \item {Created classes, process models for functional mechanisms}
+      \item {Practical experience implementing effective control algorithms for arms, elevators, flywheels,
+        holonomic and differential drive platforms}
+      \item {Used PID + Feed-forward closed-loop control, OpenCV computer vision, trapezoidal motion profiling,
+        path following for autonomous control of robot}
+      \item {Used encoders, potentiometers, limit switches, line followers, LiDAR, ultrasonic rangefinders
+      \& cameras as input data for control algorithms}
+      \item {Captured \& annotated training data, fine tuned YoloV8 and deployed real-time object detection
+        (bouding boxes) model to TensorRT platform}
       \item {Taught high-school students about control flow, program structure, git \& the above}
     \end{rSubsection}
   \end{rSection}
 
   \begin{rSection}{Technical Strengths}
     \begin{rSubsection}{Computer Languages}{}{}{}
-      Python, Go, Java, Bash, C/C++, Node.js
+      Python, Go, Java, C/C++, Bash, Node.js
     \end{rSubsection}
     \begin{rSubsection}{Tools \& Tech}{}{}{}
       Linux, Git, Docker, K8s, Prometheus metrics, Command-line tools, Kafka, Avro, Hazelcast, Flink, Esper,
-      Hadoop, ElasticSearch, AWS-\{S3, SQS, Lambda, ElastiCache, CloudFormation, CloudWatch, EC2\}, UML, RabbitMQ, Vim, \LaTeX
+      Hadoop, ElasticSearch, AWS-\{S3, SQS, Lambda, ElastiCache, CloudFormation, CloudWatch, EC2\}, CUDA, OpenCV,
+      TensorRT, FreeCAD, OnShape, UML, RabbitMQ, Vim, \LaTeX
     \end{rSubsection}
     \begin{rSubsection}{Development Practices}{}{}{}
       Agile: \{Scrum, Spiral\}, Waterfall, DevOps, CI/CD, Test Driven Development, Risk management,
