--- a/resume.tex
+++ b/resume.tex
@@ -135,7 +135,7 @@
     \begin{center}
       \begin{minipage}[t]{0.25\textwidth}
         \raggedright
-        \textbf{HugoKlepsch/Go-Snake}\\
+        \textbf{\href{https://github.com/HugoKlepsch/Go-Snake}{HugoKlepsch/Go-Snake}}\\
         \emph{June 2021}\\
       \end{minipage}%
       \begin{minipage}[t]{0.75\textwidth}
@@ -152,8 +152,8 @@
   \end{rSection}
 
   \begin{rSection}{Volunteer History}
-    \begin{rSubsection}{Alumni and programming mentor, former student member}{Burlington, ON}
-    {M. M. Robinson high school's FRC team, “MMRambotics", team 2200}
+    \begin{rSubsection}{Programming mentor and Alumni}{Burlington, ON}
+    {FIRST Robotics Competition (FRC) team \href{https://burlingtoncommunityrobotics.ca/frc-2200/}{2200}}
     {September 2013 – Present}
       \item {Created various sub-systems for functional mechanisms}
       \item {Used PIDF closed-loop control, computer vision, motion profiling, path following
