--- a/resume.tex
+++ b/resume.tex
@@ -163,7 +163,7 @@
         path following for autonomous control of robot}
       \item {Used encoders, potentiometers, limit switches, line followers, LiDAR, ultrasonic rangefinders
       \& cameras as input data for control algorithms}
-      \item {Captured \& annotated training data, fine tuned YoloV8 and deployed real-time object detection
+      \item {Captured \& annotated training data, fine-tuned YoloV8 and deployed real-time object detection
         (bouding boxes) model to TensorRT platform}
       \item {Taught high-school students about control flow, program structure, git \& the above}
     \end{rSubsection}
@@ -175,8 +175,8 @@
     \end{rSubsection}
     \begin{rSubsection}{Tools \& Tech}{}{}{}
       Linux, Git, Docker, K8s, Prometheus metrics, Command-line tools, Kafka, Avro, Hazelcast, Flink, Esper,
-      Hadoop, ElasticSearch, AWS-\{S3, SQS, Lambda, ElastiCache, CloudFormation, CloudWatch, EC2\}, CUDA, OpenCV,
-      TensorRT, FreeCAD, OnShape, UML, RabbitMQ, Vim, \LaTeX
+      Hadoop, Redis, PostgreSQL, ElasticSearch, AWS-\{S3, SQS, Lambda, ElastiCache, CloudFormation, CloudWatch, EC2, ECS,
+      ECR, EMR, GuardDuty, Athena\}, CUDA, OpenCV, TensorRT, FreeCAD, OnShape, UML, RabbitMQ, Vim, \LaTeX
     \end{rSubsection}
     \begin{rSubsection}{Development Practices}{}{}{}
       Agile: \{Scrum, Spiral\}, Waterfall, DevOps, CI/CD, Test Driven Development, Risk management,
