--- a/resume.tex
+++ b/resume.tex
@@ -156,13 +156,12 @@
     \begin{rSubsection}{Mentor, programming teacher and alumni}{Burlington, ON}
     {FIRST Robotics Competition (FRC) team \href{https://burlingtoncommunityrobotics.ca/frc-2200/}{2200}}
     {September 2013 – Present}
-      \item {Created classes, process models for functional mechanisms}
-      \item {Practical experience implementing effective control algorithms for arms, elevators, flywheels,
-        holonomic and differential drive platforms}
+      \item {Practical experience modeling and implementing effective control algorithms for robot mechanisms including:
+        arms, elevators, flywheels, holonomic and differential drive platforms}
       \item {Used PID + Feed-forward closed-loop control, OpenCV computer vision, trapezoidal motion profiling,
-        path following for autonomous control of robot}
+        Bézier curve path following for autonomous control of robot}
       \item {Used encoders, potentiometers, limit switches, line followers, LiDAR, ultrasonic rangefinders
-      \& cameras as input data for control algorithms}
+      \& cameras as sensor data for control algorithms}
       \item {Captured \& annotated training data, fine-tuned YoloV8 and deployed real-time object detection
         (bouding boxes) model to TensorRT platform}
       \item {Taught high-school students about control flow, program structure, git \& the above}
