Add new project link; update formatting for consistency

--- a/resume.tex
+++ b/resume.tex
@@ -130,7 +130,8 @@
     \begin{center}
       \begin{minipage}[t]{0.25\textwidth}
         \raggedright
-        \textbf{Maintainer of \href{https://github.com/caddy-dns/linode}{caddy-dns/linode}}\\
+        \textbf{Maintainer of \href{https://github.com/caddy-dns/linode}{\texttt{caddy-dns/linode}},
+          \href{https://github.com/HugoKlepsch/libdns-linode}{\texttt{HugoKlepsch/libdns-linode}}}\\
         \emph{August 2025-Present}\\
       \end{minipage}%
       \begin{minipage}[t]{0.75\textwidth}
@@ -144,11 +145,12 @@
         \end{list}
       \end{minipage}%
     \end{center}
+    
     \vspace{-0.6em}
     \begin{center}
       \begin{minipage}[t]{0.25\textwidth}
         \raggedright
-        \textbf{\href{https://github.com/HugoKlepsch/Go-Snake}{HugoKlepsch/Go-Snake}}\\
+        \textbf{\href{https://github.com/HugoKlepsch/Go-Snake}{\texttt{HugoKlepsch/Go-Snake}}}\\
         \emph{June 2021}\\
       \end{minipage}%
       \begin{minipage}[t]{0.75\textwidth}
