Refine wording for job responsibilities; update PDF rendering

--- a/resume.tex
+++ b/resume.tex
@@ -101,11 +101,14 @@
     \begin{rSubsection2Titles}{Arctic Wolf Networks}{Waterloo, ON}
     {Senior Developer} {January 2023 - Present}
     {Member of technical staff} {May 2018 - August 2018, January 2019 - August 2019, July 2020 - December 2023}
-      \item Controlled schema chaos by integrating a schema registry into a legacy data pipeline
+      \item Controlled schema chaos by integrating a schema registry into \textit{the} huge, ownerless, moneymaking,
+        everything-data pipeline
       \item Developed many streaming ETL (Extract, Transform, Load) pipelines while integrating hundreds of
         security-related data sources (Identity providers, firewalls, DHCP/DNS/NTP/email/Domain servers,
         antivirus/endpoint/user software, network scanners etc)
-      \item Worked with stakeholders to bring a product from concept to delivery
+      \item Worked with internal and external customers to bring a product from concept to adoption: User interviews,
+        product concept development, requirements gathering, design-implementation-iteration, usability studies,
+        adoption strategy development
       \item Used Esper, Apache Flink and Hadoop as part of a CEP (Complex Event Processing) pipeline
       to find patterns in an unbounded series of real-time events
       \item Lead design and implementation of auto-scaling microservices supporting
